<resources>
    <string name="app_name">MyWanAndroid</string>

    <string name="pressAgain">再按一次退出</string>

    <!--底部导航栏-->
    <string name="navigation_home">首页</string>
    <string name="navigation_wechat">公众号</string>
    <string name="navigation_project">项目</string>
    <string name="navigation_navigation">导航</string>
    <string name="navigation_knowledge_tree">知识体系</string>

    <!--侧滑Drawer-->
    <string name="drawer_collect">收藏</string>
    <string name="drawer_todo_list">待办清单</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_logout">退出登录</string>

    <!--login&register-->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="loginSuccess">登陆成功</string>
    <string name="registerSuccess">注册成功</string>
    <string name="registerAccount">注册账号</string>

    <!--首页 Toolbar meun-->
    <string name="toolbar_main_search">搜索</string>
    <string name="toolbar_main_scan">扫码</string>

    <string name="webview_loading">加载中…</string>
    <string name="webview_title_err">未知标题</string>
</resources>
